# AGENT33

./: .claude-team-status.json  .dockerignore  .gitignore  .pr-body-session53-p2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_BODY.md  README.md  RELEASE_NOTES_2026-01-16.md  dedup-policy.md  findings.md  manifest.md  progress.md  sync-plan.md  task_plan.md
engine/: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.shared-ollama.yml  docker-compose.yml  download_heretic.ps1  pyproject.toml  ruff_errors.json  runtime_compatibility.lock.json  start_heretic_server.ps1
engine/agent-definitions/: browser-agent.json  director.json  orchestrator.json  qa.json  researcher.json  worker.json
engine/alembic/: env.py
engine/alembic/versions/: 001_initial.py  002_embedding_dim_hnsw.py  002_observatory.py
engine/docker/: agent-os-entrypoint.sh
engine/docs/: api-reference.md  architecture.md  getting-started.md  runtime-compatibility.md
engine/observatory/: api.js  app.js  index.html  knowledge-graph.js  styles.css
engine/packs/official-outcome-packs/outcomes/: competitor-research-brief.yaml
engine/packs/web-research/: PACK.yaml
engine/scripts/: check_runtime_compatibility.py  download_model.py
engine/src/agent33/: config.py  config_apply.py  config_schema.py  main.py  state_paths.py
engine/src/agent33/agents/: capabilities.py  context_manager.py  definition.py  delegation.py  effort.py  events.py  isc.py  profiling.py  reasoning.py  registry.py  runtime.py  stuck_detector.py  tokenizer.py  tool_loop.py  tool_loop_taxonomy.py
engine/src/agent33/api/: route_approvals.py
engine/src/agent33/automation/: dead_letter.py  filters.py  scheduler.py  webhook_delivery.py  webhooks.py
engine/src/agent33/autonomy/: __init__.py  enforcement.py  models.py  p69b_service.py  preflight.py  service.py
engine/src/agent33/backup/: __init__.py  restore_planner.py  service.py
engine/src/agent33/cli/: bench.py  bootstrap.py  diagnose.py  main.py  output.py  packs.py  wizard.py
engine/src/agent33/component_security/: claude_security.py  llm_security.py  mcp_scanner.py  models.py  persistence.py  sarif.py
engine/src/agent33/connectors/: __init__.py  boundary.py  circuit_breaker.py  executor.py  governance.py  middleware.py  models.py  monitoring.py
engine/src/agent33/db/: __init__.py  models.py  session.py
engine/src/agent33/discovery/: service.py
engine/src/agent33/env/: ollama_setup.py
engine/src/agent33/evaluation/: __init__.py  ctrf.py  db_verifier.py  evaluator_registry.py  experiment.py  gates.py  llm_evaluator.py  metrics.py  models.py  multi_trial.py  multi_turn.py  ppack_ab_persistence.py  ppack_ab_service.py  regression.py  scheduled_gates.py  service.py
engine/src/agent33/execution/: executor.py  models.py  programmatic_tool_chain.py  validation.py
engine/src/agent33/explanation/: __init__.py  fact_check.py  models.py
engine/src/agent33/hooks/: __init__.py  builtins.py  middleware.py  models.py  registry.py  script_discovery.py  script_hook.py
engine/src/agent33/improvement/: __init__.py  checklists.py  evolution.py  ingestion_artifacts.py  metrics.py  models.py  persistence.py  quality.py  repo_ingestion.py  service.py  tuning.py
engine/src/agent33/ingestion/: README.md  __init__.py  base.py  coordinator.py  gdelt.py  journal.py  mailbox.py  mailbox_persistence.py  manager.py  metrics.py  models.py  notifications.py  rss.py  service.py  youtube.py
engine/src/agent33/lifespan/: phases.py
engine/src/agent33/llm/: airllm_provider.py  base.py  ollama.py  (+8 more)
engine/test-results/: ctrf-smoke-report.json
engine/tests/: conftest.py  test_activity_api.py  test_aep6_remediations.py  test_agent_builder_api.py  test_agent_profiling.py  test_agent_registry.py  test_airllm_provider.py  test_architecture_gaps.py  test_auth.py  test_auth_bootstrap.py  test_automation_filters.py  test_awm_tier1.py  test_backup_routes.py  test_backup_service.py  test_bootstrap.py  test_browser_vision.py  test_chat.py  test_comparative_bundle_evaluation.py  test_comparative_elo.py  test_comparative_models.py  test_comparative_population.py  test_comparative_routes.py  test_comparative_service.py  test_component_security_api.py  test_config_runtime_urls.py  test_connection_pooling.py  test_connector_boundary_llm_memory.py  test_connector_boundary_messaging_adapters.py  test_connector_boundary_multimodal_adapters.py  test_connector_monitoring.py  test_context_compressor.py  test_cross_feature_integration.py  test_dag_layout.py  test_db_models.py  test_delegate_subtask.py  test_diagnose.py  test_discovery_routes.py  test_discovery_service.py  test_elevenlabs_transport.py  test_embedding_swap.py  (+175 more)
engine/tests/benchmarks/: test_dag_performance.py  test_skills_smoke.py
engine/tests/e2e/: conftest.py  test_agent_tool_memory_flow.py  test_multi_tenant_isolation.py  test_workflow_agent_bridge.py
engine/tests/integration/: test_workflow_execution.py
engine/tool-definitions/: browser.yml  file_ops.yml  reader.yml  search.yml  shell.yml  web_fetch.yml
(+1439 files in other folders)
