[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent33"
version = "0.1.0"
description = "Autonomous AI agent orchestration engine"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "asyncpg>=0.30,<1",
    "redis[hiredis]>=5.2,<6",
    "nats-py>=2.9,<3",
    "structlog>=24.4,<25",
    "jinja2>=3.1,<4",
    "cryptography>=44,<45",
    "pyjwt[crypto]>=2.10,<3",
    "typer>=0.15,<1",
    "apscheduler>=3.10,<4",
    "pgvector>=0.3,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "langchain-core>=0.3,<1",
    "langgraph>=0.2,<1",
    "langgraph-checkpoint-postgres>=2,<3",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
messaging = [
    "python-telegram-bot>=21,<22",
    "discord.py>=2.4,<3",
    "slack-bolt>=1.21,<2",
]
browser = [
    "playwright>=1.49,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[project.scripts]
agent33 = "agent33.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent33"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring running services",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nats.*", "apscheduler.*", "pgvector.*", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true
