[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent33"
version = "0.1.0"
description = "Autonomous AI agent orchestration engine"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.6,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "pydantic>=2.10.5,<3",
    "pydantic-settings>=2.7.1,<3",
    "httpx>=0.28.1,<1",
    "asyncpg>=0.30,<1",
    "redis[hiredis]>=5.2,<6",
    "nats-py>=2.9,<3",
    "structlog>=24.4,<25",
    "jinja2>=3.1.5,<4",
    "cryptography>=46.0.5,<47",
    "pyjwt[crypto]>=2.10.1,<3",
    "typer>=0.15,<1",
    "apscheduler>=3.10,<4",
    "pgvector>=0.3,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "jsonschema>=4.23,<5",
    "langchain-core>=0.3,<1",
    "python-multipart>=0.0.18",
    "mcp>=1.0.0",
    "PyYAML>=6.0",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
messaging = [
    "python-telegram-bot>=21,<22",
    "discord.py>=2.4,<3",
    "slack-bolt>=1.21,<2",
]
browser = [
    "playwright>=1.49,<2",
]
reader = [
    "trafilatura>=1.8,<2",
]
gpu = [
    "airllm>=2.8,<3",
    "torch>=2.2,<3",
    "transformers>=4.38,<5",
    "accelerate>=0.27,<1",
    "huggingface_hub>=0.21,<1",
]
pdf = [
    "PyMuPDF>=1.23",
    "pdfplumber>=0.10",
]
ocr = [
    "pillow>=10.0",
    "pytesseract>=0.3",
]
tokenizer = [
    "tiktoken>=0.5",
]
telemetry = [
    "opentelemetry-api>=1.20",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28.1,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
    "types-PyYAML>=6.0",
]

[project.scripts]
agent33 = "agent33.cli.main:app"

[project.entry-points."agent33.tools"]
tldr_read = "agent33.tools.tldr_enforcer:TLDRReadEnforcerTool"
a2a_subordinate = "agent33.workflows.actions.a2a_subordinate:DeployA2ASubordinateTool"
computer_use = "agent33.tools.computer_use:ComputerUseTool"

[tool.hatch.build.targets.wheel]
packages = ["src/agent33"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring running services",
    "benchmark: marks benchmark and performance tests",
    "smoke: marks fast smoke tests for CI",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "nats",
    "nats.*",
    "apscheduler",
    "apscheduler.*",
    "pgvector",
    "pgvector.*",
    "langchain_core",
    "langchain_core.*",
    "mcp",
    "mcp.*",
    "airllm",
    "airllm.*",
    "tiktoken",
    "tiktoken.*",
    "trafilatura",
    "trafilatura.*",
    "pdfplumber",
    "pdfplumber.*",
    "opentelemetry",
    "opentelemetry.*",
    "asyncpg",
    "asyncpg.*",
    "fitz",
    "fitz.*",
    "pytesseract",
    "pytesseract.*",
    "yaml",
    "yaml.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true
